--- a/src/components/Header/Header/Header.module.css
+++ b/src/components/Header/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header {
-  background-color: var(--primary-6);
+  background-color: var(--primera-80);
+  color: var(--primera-30);
   padding-block: min(1.5vw, var(--space-300));
 }
 
@@ -29,7 +30,7 @@
   font-size: min(5vw, var(--fs-700));
   font-weight: var(--f-wei-700);
   font-stretch: var(--f-str-90);
-  color: var(--gray-13);
+  /* color: var(--base-gray-4); */
   margin-left: var(--space-300);
   text-shadow: var(--shadow-300);
 }
