--- a/src/components/Header/LangSwitcherSelect/LangSwitcherSelect.module.css
+++ b/src/components/Header/LangSwitcherSelect/LangSwitcherSelect.module.css
@@ -6,12 +6,12 @@
   padding: var(--space-100);
   padding-inline: var(--space-300);
   border-radius: var(--space-200);
-  background-color: var(--primary-5);
+  background-color: var(--primera-90);
   font-size: var(--fs-300);
 }
 
 .container:hover {
-  background-color: var(--primary-4);
+  background-color: var(--primera-100);
 }
 
 .select {
