--- a/src/assets/global-styles/globals.css
+++ b/src/assets/global-styles/globals.css
@@ -16,15 +16,19 @@
   --space-800: 2rem;
   --space-900: 3rem;
 
-  --shadow-300: 1px 1px 4px var(--gray-8);
-  --shadow-400: 2px 2px 6px var(--gray-6);
+  --shadow-300: 1px 1px 4px var(--base-gray-9);
+  --shadow-400: 2px 2px 6px var(--base-gray-8);
 
-  --transition-400: all 0.3s ease-in-out;
+  --transition-400: all 0.2s ease-in-out;
+
+  --b-radius-100: 5px;
+  --b-radius-200: 10px;
+  --b-radius-300: 15px;
 }
 
 body {
-  background-color: var(--gray-1);
-  color: var(--gray-15);
+  background-color: var(--base-white-20);
+  color: var(--base-black-20);
   font-size: var(--fs-400);
   font-weight: var(--f-wei-400);
   font-stretch: var(--f-str-100);
@@ -57,9 +61,9 @@ button {
 }
 
 .btnLink {
-  background-color: var(--secondary-accent);
-  border: 3px solid var(--secondary-12);
-  color: var(--primary-16);
+  background-color: var(--cuarta-80);
+  border: 3px solid var(--cuarta-30);
+  color: inherit;
   font-weight: var(--f-wei-600);
   text-decoration: none;
   padding: var(--space-200) var(--space-600);
@@ -102,7 +106,7 @@ p:not(:last-child):not([class]) {
 }
 
 :focus-visible {
-  outline: 0.375rem double var(--gray-15);
-  box-shadow: 0 0 0 0.25rem var(--gray-1);
+  outline: .375rem double var(--base-gray-6);
+  box-shadow: 0 0 0 0.15rem var(--base-gray-4);
   border-radius: 0.125rem;
 }
