--- a/src/components/HomePage/Hero/HeroHeader/heroHeader.module.css
+++ b/src/components/HomePage/Hero/HeroHeader/heroHeader.module.css
@@ -3,10 +3,11 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  color: var(--segunda-10);
 }
 
 .title {
-  color: var(--title-accent);
+  color: var(--segunda-50);
   font-size: var(--fs-hero-100);
   text-shadow: var(--shadow-400);
   line-height: 0.8;
@@ -16,7 +17,7 @@
 .dentalClinic {
   text-shadow: none;
   font-size: var(--fs-700);
-  color: var(--gray-15);
+  color: var(--segunda-40);
   font-weight: var(--f-wei-600);
   font-stretch: var(--f-str-100);
 }
@@ -38,12 +39,14 @@
   justify-content: center;
   gap: var(--space-400);
   margin-block-start: var(--space-400);
+  color: var(--segunda-10);
 }
 
 
 .actionBtn {
-  background-color: var(--tertiary-accent);
-  border: 3px solid var(--tertiary-3);
+  background-color: var(--tercera-50);
+  color: var(--tercera-100);
+  border: 3px solid var(--tercera-90);
 }
 
 .rightArrow {
@@ -52,7 +55,7 @@
   margin-inline-start: var(--space-100);
   width: var(--space-500);
   height: auto;
-
+  color: var(--tercera-50);
 }
 
 @media (min-width: 29rem) {
