--- a/src/components/SkipLink/SkipLink.module.css
+++ b/src/components/SkipLink/SkipLink.module.css
@@ -13,10 +13,10 @@
   top: 10px;
   left: 10px;
   z-index: 1000;
-  color: var(--gray-1);
-  background-color: var(--tertiary-12);
-  padding: 1rem 1.4rem;
+  color: var(--segunda-90);
+  background-color: var(--segunda-40);
+  padding: 0.8rem 1.6rem 1.1rem;
   font-size: var(--fs-500);
   font-weight: var(--f-wei-600);
-  border-radius: 2em;
+  border-radius: var(--space-900);
 }
