--- a/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
+++ b/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
@@ -10,7 +10,7 @@
 }
 
 .slider>ul {
-  height: min(40vh, 400px);
+  /* height: max(750px, 200px); */
   border-top-left-radius: calc(var(--space-700) - var(--space-300));
   border-top-right-radius: calc(var(--space-700) - var(--space-300));
   display: flex;
@@ -34,8 +34,11 @@
 }
 
 .slideContainer {
-  text-align: end;
+  /* text-align: end; */
   padding: var(--space-600);
+  display: flex;
+  flex-direction: column;
+  background-color: var(--segunda-80);
 }
 
 .slideContainer h2 {
@@ -43,7 +46,21 @@
 }
 
 .slideContainer p {
-  margin-block: var(--space-400);
+  margin-block-start: var(--space-400);
+  /* Safari & Firefox */
+  -webkit-line-clamp: 6;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  /* Chromium */
+  line-clamp: 6;
+}
+
+.slideContainer a {
+  margin-block-start: var(--space-400);
+  align-self: start;
+  justify-content: space-between;
+  margin-block-start: auto
 }
 
 .buttonsContainer {
