--- a/src/components/Header/LangSwitcherSelect/LangSwitcherSelect.module.css
+++ b/src/components/Header/LangSwitcherSelect/LangSwitcherSelect.module.css
@@ -8,6 +8,7 @@
   border-radius: var(--space-200);
   background-color: var(--primera-90);
   font-size: var(--fs-300);
+  transition: var(--transition-400);
 }
 
 .container:hover {
