--- a/src/components/Header/Header/Header.module.css
+++ b/src/components/Header/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
-  background-color: var(--primera-80);
-  color: var(--primera-10);
+  /* background-color: var(--primera-80); */
+  /* color: var(--primera-10); */
   padding-block: min(1.5vw, var(--space-300));
 }
 
@@ -22,7 +22,7 @@
 .logo svg {
   height: min(12vw, 60px);
   width: auto;
-  filter: drop-shadow(var(--shadow-400));
+  /* filter: drop-shadow(var(--shadow-400)); */
 }
 
 .logo .p {
@@ -32,7 +32,7 @@
   font-stretch: var(--f-str-90);
   color: var(--primera-20);
   margin-left: var(--space-300);
-  text-shadow: var(--shadow-300);
+  /* text-shadow: var(--shadow-300); */
 }
 
 .quickLinks {
