--- a/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
+++ b/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
@@ -2,8 +2,8 @@
   align-self: stretch;
   display: flex;
   flex-direction: column;
-  background-color: var(--segunda-100);
-  color: var(--segunda-10);
+  background-color: var(--primera-100);
+  color: var(--primera-10);
   padding: var(--space-300);
   border-radius: var(--space-700);
   box-shadow: var(--shadow-400);
@@ -32,7 +32,7 @@
 .slider li {
   flex: 0 0 100%;
   scroll-snap-align: center;
-  background-color: var(--segunda-90);
+  background-color: var(--primera-90);
   height: 100%;
 }
 
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  background-color: var(--segunda-90);
+  background-color: var(--primera-90);
   height: 100%;
 }
 
@@ -70,7 +70,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--segunda-90);
+  background-color: var(--primera-90);
   border-bottom-left-radius: calc(var(--space-700) - var(--space-300));
   border-bottom-right-radius: calc(var(--space-700) - var(--space-300));
 }
@@ -87,7 +87,7 @@
 }
 
 .navButton:hover {
-  color: var(--segunda-40);
+  color: var(--primera-40);
 }
 
 
@@ -116,7 +116,7 @@
 
 
 .menuCarouselBtn {
-  color: var(--segunda-20);
+  color: var(--primera-20);
   flex: 1 1 0;
   font-size: var(--fs-100);
   display: flex;
@@ -124,7 +124,7 @@
   align-items: center;
   padding: var(--space-200);
   border-radius: var(--space-200);
-  border: 1px solid var(--segunda-80);
+  border: 1px solid var(--primera-80);
   transition: var(--transition-400);
 }
 
