--- a/src/components/HomePage/Hero/Hero/hero.module.css
+++ b/src/components/HomePage/Hero/Hero/hero.module.css
@@ -1,7 +1,7 @@
 .hero {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   padding-block: var(--space-900);
   gap: var(--space-900);
 }
