--- a/src/components/Header/MenuDrawer/MenuDrawer.module.css
+++ b/src/components/Header/MenuDrawer/MenuDrawer.module.css
@@ -12,21 +12,22 @@
 
 .navDrawer {
   position: absolute;
-  inset: min(1.5vw, var(--space-400));
-  background-color: var(--primera-80);
+  inset: min(1vw, var(--space-400));
+  background-color: var(--primera-100);
   color: var(--primera-10);
   padding-block: min(3vw, var(--space-400));
   overflow-y: auto;
   border-radius: min(2vw, var(--space-400));
   translate: 0% -110%;
+  max-width: 76.5rem;
+  margin-inline: auto;
 }
 
 .innerContainer {
   display: flex;
   flex-wrap: wrap;
   gap: var(--space-600);
-  max-width: 75rem;
-  padding-inline: calc(var(--space-800) + 0.5rem);
+  padding-inline: calc(var(--space-400) + 0.5rem);
   padding-block-end: var(--space-600);
   margin: auto;
 }
@@ -48,15 +49,16 @@
   justify-content: center;
   gap: var(--space-100);
   margin-block-end: var(--space-400);
+  margin-inline: var(--space-600);
 }
 
 .closeBtn {
   position: fixed;
   top: min(0.4vw, var(--space-400));
-  right: min(0.4vw, var(--space-400));
+  right: min(1.1vw, var(--space-400));
+  padding: var(--space-200);
   border: none;
   background: none;
-  padding: var(--space-100);
 }
 
 .closeBtn>svg {
@@ -67,7 +69,7 @@
 
 .details {
   margin-block: var(--space-200);
-  background-color: var(--primera-100);
+  background-color: var(--primera-90);
   border-radius: var(--b-radius-100)
 }
 
@@ -92,7 +94,8 @@
   text-decoration: none;
 }
 
-.details a:hover {
+.details a:hover,
+.details a:focus {
   text-decoration: underline;
 }
 
@@ -104,7 +107,7 @@
   user-select: none;
   -webkit-user-select: none;
   padding: var(--space-100) var(--space-300);
-  background-color: var(--primera-20);
+  background-color: var(--primera-30);
   border-radius: var(--b-radius-100);
   /* list-style-position: outside; */
   color: var(--primera-100);
@@ -112,7 +115,11 @@
 
 .summary::marker,
 .summary::-webkit-details-marker {
-  color: var(--sexta-70);
+  color: var(--sexta-50);
+}
+
+.location img {
+  border-radius: var(--b-radius-100);
 }
 
 .containerQuery {
@@ -123,6 +130,18 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-500);
+}
+
+.timetable table {
+  width: 100%;
+}
+
+.timetable th {
+  text-align: left;
+}
+
+.timetable td {
+  text-align: right;
 }
 
 @container (min-width: 43rem) {
