--- a/src/assets/global-styles/fonts.css
+++ b/src/assets/global-styles/fonts.css
@@ -25,24 +25,34 @@
   --f-wei-700: 700;
   --f-wei-800: 800;
   --f-wei-900: 900;
+
+  --lh-100: 1;
+  --lh-200: 1.2;
+  --lh-300: 1.3;
+  --lh-400: 1.4;
+  --lh-500: 1.5;
+
 }
 
 h1 {
   font-size: var(--fs-800);
   font-weight: var(--f-wei-900);
   font-stretch: var(--f-str-90);
+  line-height: var(--lh-300);
 }
 
 h2 {
   font-size: var(--fs-600);
   font-weight: var(--f-wei-800);
   font-stretch: var(--f-str-90);
+  line-height: var(--lh-400);
 }
 
 h3 {
   font-size: var(--fs-500);
   font-weight: var(--f-wei-700);
   font-stretch: var(--f-str-100);
+  line-height: var(--lh-400);
 }
 
 h4 {
